tizzit-24 - fullDeploy running - some issues with unitDeploy ; tizzit-245 - found lots of possible errors and bugs with 'findBugs'-eclipse plugin (will check them bit by bit)
git-svn-id: http://tizzit.googlecode.com/svn/trunk@677 e03753de-7d0d-11de-8963-3b09bc248160